# FinanceAnalyzer

./: .gitignore  README.md  launcher.py  main.py  model-input.md  pyproject.toml  system_prompt.md
.github/workflows/: release.yml
src/finance_analyzer/: main.py
src/finance_analyzer/core/: data_manager.py  db.py  exporter.py  parser.py  rules.py
src/finance_analyzer/gui/: app.py
src/finance_analyzer/gui/views/: analysis_view.py  import_view.py  rules_view.py
src/finance_analyzer/models/: transaction.py
src/financeanalyzer/: __init__.py  main.py
src/financeanalyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/financeanalyzer/database/: __init__.py  models.py  service.py
src/financeanalyzer/export/: __init__.py  excel_export.py
src/financeanalyzer/importer/: __init__.py  csv_parser.py
src/financeanalyzer/services/: __init__.py  categorization_engine.py  category_service.py  entry_service.py  profile_service.py  rule_service.py
src/financeanalyzer/ui/: __init__.py  main_window.py  profile_dialog.py
src/financeanalyzer/ui/dialogs/: __init__.py  category_dialog.py  clone_dialog.py  entry_dialog.py  export_dialog.py  import_dialog.py  rule_dialog.py
src/financeanalyzer/ui/tabs/: __init__.py  all_entries_tab.py  conflicts_tab.py  dashboard_tab.py  uncategorized_tab.py
src/financeanalyzer/ui/widgets/: __init__.py  configurable_table.py
tests/: __init__.py  test_data_manager.py  test_full.py  test_parser.py  test_rules.py  test_ux.py  test_v2.py  test_v3.py
