[project]
name = "financeanalyzer"
version = "0.1.0"
description = "A modern GUI Finance Analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "packaging>=23.0",
    "pytest>=7.0.0",
    "nuitka>=2.8.9",
    "requests>=2.32.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
