[project]
name = "financeanalyzer"
version = "0.1.0"
description = "A local GUI application to help small businesses prepare financial data for taxes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "SQLAlchemy>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "packaging>=23.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
financeanalyzer = "financeanalyzer.main:main"
